fixed transformX transition on mobile

--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -20,7 +20,7 @@
   z-index: 10;
   background-color: var(--card);
   transform: translateX(100%);
-  transition: transform 400ms ease-in-out;
+  transition: transform 0.4s ease-in-out;
 
   .logo {
     display: none;
